package qova.course;

public enum CourseFaculty {
    MEDICINE, COMPUTER_SCIENCE, ENGINEERING, ARCHITECTURE, PSYCHOLOGY; //muss erweitert werden

}