package qova.course;

public enum courseType{
    LECTURE, TUTORIAL, SEMINAR;

}